[tool.poetry]
name = "ite-basic-missed-topics"
version = "0.1.0"
description = ""
authors = ["Jacob Mischka <jmischka@mcw.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
openpyxl = "^3.0.3"
"pdfminer.six" = "^20200402"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
