[tool.poetry]
name = "ite-basic-missed-topics"
version = "0.2.0"
description = ""
authors = ["Jacob Mischka <jmischka@mcw.edu>"]
license = "MIT"
include = ["ite_basic_missed_topics/*", "fix_higher_percentages.py", "missed_topics.py", "percentile_plotting.py", "strip_header.py"]

[tool.poetry.dependencies]
python = "^3.8"
openpyxl = "^3.0.3"
"pdfminer.six" = "^20200402"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]
pylint = "^2.7.1"

[tool.poetry.scripts]
strip_acgme_header = "strip_header:main"
acgme_missed_topics = "missed_topics:main"
ite_plot_percentiles = "percentile_plotting:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
