[tool.poetry]
name = "ite-basic-missed-topics"
version = "1.0.0"
description = ""
authors = ["Jacob Mischka <jmischka@mcw.edu>"]
license = "MIT"
include = ["ite_basic_missed_topics/*", "fix_higher_percentages.py", "missed_topics.py", "percentile_plotting.py", "strip_header.py"]

[tool.poetry.dependencies]
python = "^3.8"
openpyxl = "^3.0.3"
matplotlib = "^3.2.1"
Gooey = "^1.0.8"
pdftotext = "^2.2.1"

[tool.poetry.dev-dependencies]
pylint = "^2.7.1"

[tool.poetry.scripts]
ite-basic-missed-topics = "missed_topics:main"
ite-percentile-plotting = "percentile_plotting:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
